# automation_financial_statements

./: .cursorrules  .gitignore  License.txt  Makefile  Pipfile  README.md  installer.nsi  main.py  mise.toml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assets/: app.icns
build_config/: macos_build.spec  windows_build.spec
docs/: design.md
output/table/: output_table_20250129_154231.xlsx
scripts/: build.py  generate_icons.py
src/: test_processor.py
src/config/: settings.py  shift_config.py  version_config.py
src/gui/: main_window.py  styles.py
src/gui/components/: preview.py  update_dialog.py
src/processors/: excel_updater.py  invoice_processor.py  table_processor.py  test_table.py
src/prompts/: invoice_recognition.py
src/utils/: app_paths.py  invoice_processor.py  logger.py  test_value_parser.py  theme_manager.py  updater.py  value_parser.py
tables/: 油品优惠_20250130_172036.xls  油品优惠_20250208_115802.xls
tests/: conftest.py
