[project]
name = "automation-financial-statements"
version = "0.1.0"
description = ""
authors = [
    {name = "jeuneastre",email = "sy20010504@gmail.com"}
]
readme = "README.md"
requires-python = "~3.11"
dependencies = [
    "pyside6 (>=6.8.1.1,<7.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.1,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "cairosvg (>=2.7.1,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "main:main"
[tool.poetry.group.dev.dependencies]
nuitka = "^2.6.4"

